force-app/main/default/objects/InvoiceDocument__c/InvoiceDocument__c.object-meta.xml
<CustomObject>
    <label>請求書</label>
    <nameField>
        <label>請求書名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>