force-app/main/default/objects/InvoiceDocument__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>請求書</relationshipLabel>
    <relationshipName>InvoiceDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>