force-app/main/default/objects/InvoiceDocument__c/fields/AccountingDetail_Cnt__c.field-meta.xml
<CustomField>
    <fullName>AccountingDetail_Cnt__c</fullName>
    <label>請求・支払明細の件数</label>
    <summaryForeignKey>AccountingDetail__c.InvoiceDocument__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>