force-app/main/default/objects/InvoiceDocument__c/fields/AccumulatingBalance_F__c.field-meta.xml
<CustomField>
    <fullName>AccumulatingBalance_F__c</fullName>
    <formula>CarryoverAmount__c + DeductionAmount_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>累計残高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>