force-app/main/default/objects/InvoiceDocument__c/fields/CarryoverAmount__c.field-meta.xml
<CustomField>
    <fullName>CarryoverAmount__c</fullName>
    <label>繰越金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>