force-app/main/default/objects/InvoiceDocument__c/fields/ClosingDate_F__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate_F__c</fullName>
    <formula>TEXT(Account__r.ClosingDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>締日</label>
    <type>Text</type>
</CustomField>