force-app/main/default/objects/InvoiceDocument__c/fields/DeductionAmount_F__c.field-meta.xml
<CustomField>
    <fullName>DeductionAmount_F__c</fullName>
    <formula>TotalPrice_F__c  - ReconciledAmount_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差引金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>