force-app/main/default/objects/InvoiceDocument__c/fields/InvoiceAmountTaxExcluded_Sum__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmountTaxExcluded_Sum__c</fullName>
    <label>積み上げ金額（税抜き）</label>
    <summarizedField>AccountingDetail__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AccountingDetail__c.ConsumptionTaxRate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>AccountingDetail__c.ConsumptionTaxRate__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountingDetail__c.InvoiceDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>