force-app/main/default/objects/InvoiceDocument__c/fields/InvoiceAmountTaxFree_Sum__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmountTaxFree_Sum__c</fullName>
    <label>積み上げ金額（非課税）</label>
    <summarizedField>AccountingDetail__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>AccountingDetail__c.ConsumptionTaxRate__c</field>
        <operation>equals</operation>
        <value>,0</value>
    </summaryFilterItems>
    <summaryForeignKey>AccountingDetail__c.InvoiceDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>