force-app/main/default/objects/InvoiceDocument__c/fields/InvoicePrice__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrice__c</fullName>
    <label>請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>