force-app/main/default/objects/InvoiceDocument__c/fields/MiscChargesDocument__c.field-meta.xml
<CustomField>
    <fullName>MiscChargesDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>諸掛明細書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>請求書 (諸掛明細書)</relationshipLabel>
    <relationshipName>MiscChargesDocumentList</relationshipName>
    <type>Lookup</type>
</CustomField>