force-app/main/default/objects/InvoiceDocument__c/fields/PaymentDeterminedAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentDeterminedAmount__c</fullName>
    <inlineHelpText>支払の場合、小計（非課税）は調整しない、小計（税抜き）を上書きしたい場合、支払決定額（税抜き）を入力してください。</inlineHelpText>
    <label>支払決定額（税抜き）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>