force-app/main/default/objects/InvoiceDocument__c/fields/PrintDate__c.field-meta.xml
<CustomField>
    <fullName>PrintDate__c</fullName>
    <inlineHelpText>直近で帳票ボタンを押下した日付が自動入力されます</inlineHelpText>
    <label>発行日</label>
    <type>Date</type>
</CustomField>