force-app/main/default/objects/InvoiceDocument__c/fields/Printed__c.field-meta.xml
<CustomField>
    <fullName>Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>1度でも帳票を行った場合 自動でチェックが入ります</inlineHelpText>
    <label>帳票済</label>
    <type>Checkbox</type>
</CustomField>