force-app/main/default/objects/InvoiceDocument__c/fields/ReconciledAmount_Sum__c.field-meta.xml
<CustomField>
    <fullName>ReconciledAmount_Sum__c</fullName>
    <label>消込合計金額</label>
    <summarizedField>ReconciliationInput__c.Amount__c</summarizedField>
    <summaryForeignKey>ReconciliationInput__c.InvoiceDocument__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>