force-app/main/default/objects/InvoiceDocument__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm</fullName>
                <default>true</default>
                <label>確認中</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <label>処理済み</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>