force-app/main/default/objects/InvoiceDocument__c/fields/StorageHandlingDocument__c.field-meta.xml
<CustomField>
    <fullName>StorageHandlingDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>保管・荷役明細書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>請求書 (保管・荷役明細書)</relationshipLabel>
    <relationshipName>StorageHandlingDocumentList</relationshipName>
    <type>Lookup</type>
</CustomField>