force-app/main/default/objects/InvoiceDocument__c/fields/TotalPrice_F__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_F__c</fullName>
    <formula>/* 小計（税抜き）+ 小計（非課税） + 消費税（１０％）*/
SubtotalTaxFree_F__c + SubtotalTaxExcluded_F__c + ConsumptionTax_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>