force-app/main/default/objects/InvoiceDocument__c/fields/TotalSummaryDocument__c.field-meta.xml
<CustomField>
    <fullName>TotalSummaryDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>合計書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>請求書</relationshipLabel>
    <relationshipName>InvoiceDocumentList</relationshipName>
    <type>Lookup</type>
</CustomField>