force-app/main/default/objects/InvoiceDocument__c/fields/TransactionDetail__c.field-meta.xml
<CustomField>
    <fullName>TransactionDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入出金明細</label>
    <referenceTo>DepositWithdrawalDetail__c</referenceTo>
    <relationshipLabel>請求書</relationshipLabel>
    <relationshipName>InvoiceDocumentList</relationshipName>
    <type>Lookup</type>
</CustomField>