force-app/main/default/objects/InvoiceDocument__c/fields/TransportDocument__c.field-meta.xml
<CustomField>
    <fullName>TransportDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>運送明細書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>請求書 (運送明細書)</relationshipLabel>
    <relationshipName>TransportDocumentList</relationshipName>
    <type>Lookup</type>
</CustomField>