force-app/main/default/objects/InvoiceDocument__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>タイプ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求書</fullName>
                <default>true</default>
                <label>請求書</label>
            </value>
            <value>
                <fullName>支払書</fullName>
            </value>
            <value>
                <fullName>運送請求書</fullName>
            </value>
            <value>
                <fullName>保管・荷役明細書</fullName>
            </value>
            <value>
                <fullName>シャトレーゼの請求</fullName>
            </value>
            <value>
                <fullName>エレクターの請求</fullName>
            </value>
            <value>
                <fullName>出向者の請求</fullName>
            </value>
            <value>
                <fullName>恒温槽</fullName>
            </value>
            <value>
                <fullName>売上のマイナス明細</fullName>
            </value>
            <value>
                <fullName>諸掛データ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>