force-app/main/default/objects/InvoiceDocument__c/fields/UnableToPrint__c.field-meta.xml
<CustomField>
    <fullName>UnableToPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>請求書の状態が「処理済み」且つ 帳票済フラグが「True」の時のみ 本項目は自動でチェックが入ります</inlineHelpText>
    <label>帳票不可</label>
    <type>Checkbox</type>
</CustomField>