force-app/main/default/objects/InvoiceDocument__c/recordTypes/Invoice.recordType-meta.xml
<RecordType>
    <fullName>Invoice</fullName>
    <active>true</active>
    <label>請求書</label>
</RecordType>