force-app/main/default/objects/InvoiceDocument__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>true</active>
    <label>支払書</label>
</RecordType>