force-app/main/default/objects/InvoiceDocument__c/validationRules/LockAccountingDetailCountAfterConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>LockAccountingDetailCountAfterConfirmed</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */
ISPICKVAL(Status__c, &apos;Confirmed&apos;)
&amp;&amp; 
/* 判定項目 */
ISCHANGED(AccountingDetail_Cnt__c)</errorConditionFormula>
    <errorMessage>請求書の「状態：処理済み」の場合、「仕分明細の件数」は変更できません。</errorMessage>
</ValidationRule>