force-app/main/default/objects/InvoiceDocument__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>TotalSummaryDocument__c</columns>
    <columns>Status__c</columns>
    <columns>SubtotalTaxFree_F__c</columns>
    <columns>ConsumptionTax_F__c</columns>
    <columns>TotalPrice_F__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>