force-app/main/default/objects/InvoiceDocument__c/listViews/DeliveryFeeList.listView-meta.xml
<ListView>
    <fullName>DeliveryFeeList</fullName>
    <columns>NAME</columns>
    <columns>InvoiceDate__c</columns>
    <columns>PrintDate__c</columns>
    <columns>Account__c</columns>
    <columns>TotalSummaryDocument__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>運送明細書</value>
    </filters>
    <label>運送明細書</label>
</ListView>