force-app/main/default/objects/InvoiceDocument__c/listViews/InvoiceLastMonth.listView-meta.xml
<ListView>
    <fullName>InvoiceLastMonth</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>TotalPrice_F__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceDate__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>先月の請求</label>
</ListView>