force-app/main/default/objects/InvoiceDocument__c/listViews/InvoiceNextMonth.listView-meta.xml
<ListView>
    <fullName>InvoiceNextMonth</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>TotalPrice_F__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>InvoiceDate__c</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>来月の請求</label>
</ListView>