force-app/main/default/objects/InvoiceDocument__c/listViews/InvoicePastAll.listView-meta.xml
<ListView>
    <fullName>InvoicePastAll</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>TotalPrice_F__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>すべての過去の請求</label>
</ListView>