force-app/main/default/objects/InvoiceDocument__c/listViews/Month15_NotConfirmed.listView-meta.xml
<ListView>
    <fullName>Month15_NotConfirmed</fullName>
    <columns>NAME</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>TotalSummaryDocument__c</columns>
    <columns>Status__c</columns>
    <columns>SubtotalTaxFree_F__c</columns>
    <columns>ConsumptionTax_F__c</columns>
    <columns>TotalPrice_F__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClosingDate_F__c</field>
        <operation>equals</operation>
        <value>Month_15</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Confirmed</value>
    </filters>
    <label>【15日締】未処理</label>
</ListView>